[build-system]
requires = ["setuptools>=68", "wheel"]

build-backend = "setuptools.build_meta"
[tool.setuptools.packages]
find = {}

[project]
name = "nera"
version = "0.0.1"
description = "NERA - graph NEural network RAting package"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["GNN", "Sport prediction", "Rating"]
dynamic = ["dependencies"]
authors = [
    {name = "Jakub Sukdol", email = "sukdojak@fel.cvut.cz"},
]

classifiers = [
    "Development Status ::  1 - Alpha",
    "Programming Language :: Python",
    "Operating System :: Linux"
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
repository = "https://github.com/kubosis/gnn_sport_prediction"