[build-system]
requires = ["setuptools>=68", "wheel"]

build-backend = "setuptools.build_meta"
[tool.setuptools.packages]
find = {}

[project]
name = "torch-rating"
version = "0.0.1c"
description = "Seamless integration of sports rating systems as layers into pytorch environment"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["GNN", "Sport prediction", "Rating"]
dynamic = ["dependencies"]
authors = [
    {name = "Jakub Sukdol", email = "sukdojak@fel.cvut.cz"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.md", "*.svg", "*.webp"]

[project.urls]
repository = "https://github.com/kubosis/torch-rating"